# AI-Knowledge-Base

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
docs/: LOCAL-LLM.md
local-llm/: README.md
nvidia-cuda/container-toolkit/: README.md
nvidia-cuda/cuda-python/: README.md
rag-pipeline/: README.md  cli.py  docker-compose.yml
rag-pipeline/docs/: QUICK_START.md
rag-pipeline/src/: document_processor.py  rag_service.py  summarization_service.py  vector_store.py
src/: config.py
src/api/: app.py  models.py
tests/: test_document_processor.py
